--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Your Name
+  name: Rosanna Xiaoyan Zhou
   avatar: bio-photo-1.jpg
-  bio: "A brief description of yourself."
-  email: #emailaddress
+  bio: "Rosanna is an Interactive Media Art student at New York University Shanghai."
+  email: xz3226@nyu.edu
   # Do not include the @ symbol in your Twitter username
   twitter: #username
   linkedin: #username
