--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site wide configuration
 
-title: Site Title
-locale: en_US
+title: xz3226 Site for Intro to DAAH
+locale: United Arab Emirates
 logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
